<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:maxLines="2"
            android:paddingBottom="15dp"
            android:paddingTop="20dp"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:textSize="16dp" />

        <LinearLayout
            android:id="@+id/ratinglayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description"
            android:paddingLeft="40dp">

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="20dp"
                android:text="@string/rating"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ratingvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="20dp"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pricelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratinglayout"
            android:paddingLeft="40dp">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating"
                android:paddingLeft="8dp"
                android:paddingTop="15dp"
                android:text="@string/price"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pricevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ratingvalue"
                android:paddingLeft="8dp"
                android:paddingTop="15dp"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pricelayout"
            android:paddingLeft="40dp">

            <TextView
                android:id="@+id/users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rating"
                android:paddingLeft="8dp"
                android:paddingTop="15dp"
                android:text="@string/user"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/usersvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pricelayout"
                android:paddingLeft="8dp"
                android:paddingTop="15dp"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/typelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userlayout"
            android:paddingLeft="40dp">

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="15dp"
                android:text="@string/type"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/typeval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="15dp"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lastupdatelayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/typelayout"
            android:paddingLeft="40dp">

            <TextView
                android:id="@+id/lastupdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="15dp"
                android:text="@string/lastupdate"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lastupdateval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="15dp"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastupdatelayout"
            android:layout_centerHorizontal="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="25dp"
            android:text="@string/url"
            android:textSize="14dp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>
